--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" type="image/svg+xml" href="favicon.svg" sizes="any">
-  <link rel="apple-touch-icon"  sizez="180x180" href="favicon.png">
+  <link rel="shortcut icon" type="image/svg+xml" href="img/favicon.svg" sizes="any">
+  <link rel="apple-touch-icon"  sizez="180x180" href="img/favicon.png">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="apple-mobile-web-app-title" content="CP Starter">
-  <link rel="apple-touch-startup-image" href="/favicon.svg">
+  <link rel="apple-touch-startup-image" href="img/favicon.svg">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="mask-icon" href="favicon.svg" color="#FFFFFF">
+  <link rel="mask-icon" href="img/favicon.svg" color="#FFFFFF">
   <meta http-equiv="Expires" CONTENT="0">
   <meta http-equiv="cache-control" content="no-cache">
   <meta http-equiv="Pragma" CONTENT="no-cache">
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet">
   <title>Simple starter</title>
-  <script src="jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <script src="functions.js"></script>
+  <script src="js/functions.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" id="viewport">
